* Changes in mcclim-0.9.5 relative to 0.9.4:
** Installation: the systems clim-listener, scigraph, clim-examples,
   and clouseau can now be loaded without loading the system mcclim
   first.

* Changes in mcclim-0.9.4 relative to 0.9.3:
** cleanup: removed the obsolete system.lisp file.
** backend improvements: Gtkairo
*** Double buffering is now supported (fixes disappearing widgets on Windows).
*** X errors no longer terminate the lisp process.
*** Some bugfixes, including CMUCL support and better key event handling.
*** Native implementation of context menus, list panes, label panes, and
    option panes.
*** Draw text using Pango.  (Bug fix: Fixed-width font supported on Windows
    now.  Multiple lines of output in TEXT-SIZE supported now.
    TEXT-STYLE-FIXED-WIDTH-P works correctly now.)
** Improvement: Added new editor substrate ("Drei").
** Improvement: Improved the pathname presentation methods considerably.
** specification compliance: DELETE-GESTURE-NAME function now implemented.
** specification compliance: PRESENTATION-TYPE-SPECIFIER-P presentaion
   function now implemented.
** specification compliance: DISPLAY-COMMAND-TABLE-MENU function now
   implemented.
** specification compliance: DISPLAY-COMMAND-MENU function now
   implemented.
** specification compliance: POINTER-PLACE-RUBBER-BAND-LINE* function
   now implemented.
** specification compliance: POINTER-INPUT-RECTANGLE* function now
   implemented.
** specification compliance: POINTER-INPUT-RECTANGLE function now
   implemented.
** Improvement: Added font listing support, see section "Fonts and Extended
   Text Styles" in the manual.
** Improvement: Added support for bezier splines (Robert Strandh).
   To be documented.
** better PRESENTATION-SUBTYPEP (more likely to give the right answer
   on some-of and all-of presentation types)
** Improvement: M-n/M-p gestures for navigating presentation histories.

* Changes in mcclim-0.9.3 "All Souls' Day" relative to 0.9.2: