@@ -221,6 +221,9 @@
 ;;;; 8.1
 (defgeneric process-next-event (port &key wait-function timeout))
 
+(defgeneric port-keyboard-input-focus (port))
+(defgeneric (setf port-keyboard-input-focus) (focus port))
+
 ;;; 8.2 Standard Device Events
 
 (defgeneric event-timestamp (event))
